themes/rstudio-lithium/static/css/main-site.css
/* ... */
pre {
  padding: 10px;
  line-height: 2em;
  margin-bottom: 1em;
  word-wrap: normal;
  word-break: normal;
  border-radius: 3px;
  border: 1px solid #e4e4e4; }
  pre code {
    display: inline;
    padding: 0;
    margin: 0;
    background-color: inherit;
    border-radius: 0;
    border: none; }

code {
  color: #606060;
  display: inline-block;
  margin: 1px 5px;
  padding: 1px 4px;
  background-color: #f8f8f8;
  border-radius: 3px;
  border: 1px solid #e4e4e4; }

blockquote {
  font-size: 1.1em;
  font-weight: 300;
  font-style: italic;
  margin: 20px 0 20px .9em;
  padding-left: 1em;
  border-left: 3px solid #e4e4e4; }

@media screen and (max-width: 1023px) {
  blockquote {
    margin-left: 20px; } }

img {
  max-width: 100%; }

h1, h2, h3, h4, h5, h6 {
  font-weight: normal; }

h2, h3, h4, h5, h6 {
  padding-top: 72px;
  margin-top: -72px; }
  h2.noTrickPadding, h3.noTrickPadding, h4.noTrickPadding, h5.noTrickPadding, h6.noTrickPadding {
    padding-top: 0;
    margin-top: 0; }

#TableOfContents ul:nth-child(1) {
  list-style: none;
  padding-left: 0; }

strong {
  font-weight: bold; }

em {
  font-style: italic; }

.stopFloatBefore:before {
  content: ".";
  visibility: hidden;
  display: block;
  height: 0;
  clear: both; }

.bookCover {
  width: 320px;
  height: auto;
  -moz-box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.1);
  -webkit-box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.1);
  -webkit-transform: rotate(359deg);
  transform: rotate(359deg);
  float: left;
  margin: 20px 50px 40px 0; }

@media screen and (max-width: 800px) {
  .bookCover {
    float: none;
    margin-bottom: 0; } }

#homeContent {
  background-color: #fff; }
  #homeContent .band .bandContent {
    display: flex;
    justify-content: space-between;
    display: -ms-flexbox;
    -ms-flex-pack: justify;
    display: -webkit-box;
    display: -webkit-flex;
    -webkit-justify-content: space-between; }
  #homeContent .band .blurb {
    font-weight: 300;
    display: inline-block;
    min-height: 160px;
    font-size: 24px;
    line-height: 40px;
    max-width: 48%; }
    #homeContent .band .blurb .tagline {
      font-size: 36px;
      margin-bottom: 16px; }
      #homeContent .band .blurb .tagline.small {
        margin-top: 62px;
        line-height: 30px;
        font-size: 24px; }
    #homeContent .band .blurb a {
      font-weight: 500; }
  #homeContent .band.first {
    height: 690px; }
    #homeContent .band.first .bandContent {
      padding-top: 220px;
      height: 100%;
      background-image: url(images/tidy-back-01.svg);
      background-repeat: no-repeat;
      background-size: 570px 690px; }
  #homeContent .band.second {
    height: 952px;
    background-color: #fdeba4; }
    #homeContent .band.second .bandContent {
      padding-top: 120px;
      padding-bottom: 100px;
      height: 100%;
      background-image: url(images/tidy-back-02.svg);
      background-repeat: no-repeat;
      background-size: 700px 952px; }
  #homeContent .band.third {
    height: 450px; }
    #homeContent .band.third .bandContent {
      height: 450px;
      padding-top: 100px;
      padding-bottom: 100px;
      background-image: url(images/tidy-back-03.svg);
      background-repeat: no-repeat;
      background-size: 650px 450px; }
  #homeContent .bookCover {
    margin-top: 50px;
    margin-left: 50px; }
  #homeContent .bee1 {
    position: absolute;
    bottom: 10px;
    left: 10px;
    width: 100px;
    height: auto; }

/* size & position adjustments */
@media screen and (max-width: 1023px) {
  #homeContent .band.first {
    height: auto; }
    #homeContent .band.first .bandContent {
      background-image: none;
      padding-bottom: 100px; }
  #homeContent .band.second, #homeContent .band.third {
    height: auto; }
    #homeContent .band.second .bandContent, #homeContent .band.third .bandContent {
      display: block;
      height: auto;
      background-image: none;
      padding-bottom: 100px; }
      #homeContent .band.second .bandContent .blurb, #homeContent .band.third .bandContent .blurb {
        max-width: 100%; }
  #homeContent .bookCover {
    margin-left: 0px; } }

@media screen and (max-width: 767px) {
  #homeContent .band.first .bandContent {
    display: block;
    height: auto; }
    #homeContent .band.first .bandContent .blurb {
      max-width: 100%; } }

.event {
  margin-top: 70px;
  padding: 40px;
  background-color: #fff;
  -moz-box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.1);
  -webkit-box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.1);
  max-width: 400px;
  background-repeat: no-repeat;
  background-position: right top;
  background-size: 75px 75px; }
  .event.odd {
    -webkit-transform: rotate(358deg);
    transform: rotate(358deg); }
  .event.even {
    -webkit-transform: rotate(2deg);
    transform: rotate(2deg); }
  .event.meetup {
    background-image: url(images/tidy-event-back-meetup.svg); }
  .event.conf {
    background-image: url(images/tidy-event-back-conf.svg); }
  .event .eventLocation {
    font-size: 20px; }
  .event .eventDate {
    font-size: 18px;
    line-height: 24px;
    margin-bottom: 10px; }
  .event .eventDetails {
    font-size: 15px;
    line-height: 22px; }

.section .event {
  margin-top: 0px;
  margin-bottom: 30px;
  border-top: 10px solid #fdeba4;
  background-color: #f8f8f8;
  background-image: none;
  background-size: 40px 40px;
  padding: 10px 20px 20px 20px;
  font-size: 20px;
  font-weight: 300;
  line-height: 25px; }
  .section .event .eventTitle {
    margin-bottom: 10px; }
  .section .event .eventLocation {
    font-size: 16px; }
  .section .event .eventDate {
    font-size: 15px; }
  .section .event .eventDetails {
    font-size: 13px;
    line-height: 18px; }

.hexBadges {
  position: relative;
  width: 500px;
  margin-top: -130px;
  height: 600px; }
/* ... */

